src/parser/cNextParser.ts
// Generated from cNext.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { cNextListener } from "./cNextListener";
import { cNextVisitor } from "./cNextVisitor";


export class cNextParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly IMPORT = 2;
	public static readonly INCLUDE = 3;
	public static readonly PUBLIC = 4;
	public static readonly STATIC = 5;
	public static readonly CLASS = 6;
	public static readonly TYPE_INT8 = 7;
	public static readonly TYPE_INT16 = 8;
	public static readonly TYPE_INT32 = 9;
	public static readonly TYPE_INT64 = 10;
	public static readonly TYPE_UINT8 = 11;
	public static readonly TYPE_UINT16 = 12;
	public static readonly TYPE_UINT32 = 13;
	public static readonly TYPE_UINT64 = 14;
	public static readonly TYPE_FLOAT32 = 15;
	public static readonly TYPE_FLOAT64 = 16;
	public static readonly TYPE_FLOAT96 = 17;
	public static readonly TYPE_STRING = 18;
	public static readonly TYPE_BOOLEAN = 19;
	public static readonly ASSIGN = 20;
	public static readonly SEMI = 21;
	public static readonly LBRACE = 22;
	public static readonly RBRACE = 23;
	public static readonly LPAREN = 24;
	public static readonly RPAREN = 25;
	public static readonly COMMA = 26;
	public static readonly RETURN = 27;
	public static readonly PLUS = 28;
	public static readonly MINUS = 29;
	public static readonly MULT = 30;
	public static readonly DIV = 31;
	public static readonly DOT = 32;
	public static readonly ID = 33;
	public static readonly NUMBER = 34;
	public static readonly STRING = 35;
	public static readonly FILENAME = 36;
	public static readonly WS = 37;
	public static readonly RULE_sourceFile = 0;
	public static readonly RULE_mainSourceFile = 1;
	public static readonly RULE_globalDeclaration = 2;
	public static readonly RULE_fileDirective = 3;
	public static readonly RULE_importDirective = 4;
	public static readonly RULE_includeDirective = 5;
	public static readonly RULE_classDeclaration = 6;
	public static readonly RULE_classMembers = 7;
	public static readonly RULE_staticMember = 8;
	public static readonly RULE_regularMember = 9;
	public static readonly RULE_classFunction = 10;
	public static readonly RULE_functionDeclaration = 11;
	public static readonly RULE_parameterList = 12;
	public static readonly RULE_parameter = 13;
	public static readonly RULE_returnType = 14;
	public static readonly RULE_declaration = 15;
	public static readonly RULE_statement = 16;
	public static readonly RULE_type_specifier = 17;
	public static readonly RULE_value = 18;
	public static readonly RULE_functionCall = 19;
	public static readonly RULE_methodCall = 20;
	public static readonly RULE_argumentList = 21;
	public static readonly RULE_expression = 22;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"sourceFile", "mainSourceFile", "globalDeclaration", "fileDirective", 
		"importDirective", "includeDirective", "classDeclaration", "classMembers", 
		"staticMember", "regularMember", "classFunction", "functionDeclaration", 
		"parameterList", "parameter", "returnType", "declaration", "statement", 
		"type_specifier", "value", "functionCall", "methodCall", "argumentList", 
		"expression",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'void'", "'import'", "'#include'", "'public'", "'static'", 
		"'class'", "'int8'", "'int16'", "'int32'", "'int64'", "'uint8'", "'uint16'", 
		"'uint32'", "'uint64'", "'float32'", "'float64'", "'float96'", "'String'", 
		"'boolean'", "'<-'", "';'", "'{'", "'}'", "'('", "')'", "','", "'return'", 
		"'+'", "'-'", "'*'", "'/'", "'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, "IMPORT", "INCLUDE", "PUBLIC", "STATIC", "CLASS", 
		"TYPE_INT8", "TYPE_INT16", "TYPE_INT32", "TYPE_INT64", "TYPE_UINT8", "TYPE_UINT16", 
		"TYPE_UINT32", "TYPE_UINT64", "TYPE_FLOAT32", "TYPE_FLOAT64", "TYPE_FLOAT96", 
		"TYPE_STRING", "TYPE_BOOLEAN", "ASSIGN", "SEMI", "LBRACE", "RBRACE", "LPAREN", 
		"RPAREN", "COMMA", "RETURN", "PLUS", "MINUS", "MULT", "DIV", "DOT", "ID", 
		"NUMBER", "STRING", "FILENAME", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(cNextParser._LITERAL_NAMES, cNextParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return cNextParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "cNext.g4"; }

	// @Override
	public get ruleNames(): string[] { return cNextParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return cNextParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(cNextParser._ATN, this);
	}
	// @RuleVersion(0)
	public sourceFile(): SourceFileContext {
		let _localctx: SourceFileContext = new SourceFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, cNextParser.RULE_sourceFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === cNextParser.IMPORT || _la === cNextParser.INCLUDE) {
				{
				{
				this.state = 46;
				this.fileDirective();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this.classDeclaration();
			this.state = 53;
			this.match(cNextParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public mainSourceFile(): MainSourceFileContext {
		let _localctx: MainSourceFileContext = new MainSourceFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, cNextParser.RULE_mainSourceFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === cNextParser.IMPORT || _la === cNextParser.INCLUDE) {
				{
				{
				this.state = 55;
				this.fileDirective();
				}
				}
				this.state = 60;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 66;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << cNextParser.T__0) | (1 << cNextParser.STATIC) | (1 << cNextParser.CLASS) | (1 << cNextParser.TYPE_INT8) | (1 << cNextParser.TYPE_INT16) | (1 << cNextParser.TYPE_INT32) | (1 << cNextParser.TYPE_INT64) | (1 << cNextParser.TYPE_UINT8) | (1 << cNextParser.TYPE_UINT16) | (1 << cNextParser.TYPE_UINT32) | (1 << cNextParser.TYPE_UINT64) | (1 << cNextParser.TYPE_FLOAT32) | (1 << cNextParser.TYPE_FLOAT64) | (1 << cNextParser.TYPE_FLOAT96) | (1 << cNextParser.TYPE_STRING) | (1 << cNextParser.TYPE_BOOLEAN))) !== 0) || _la === cNextParser.ID) {
				{
				this.state = 64;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case cNextParser.ID:
					{
					this.state = 61;
					this.globalDeclaration();
					}
					break;
				case cNextParser.T__0:
				case cNextParser.TYPE_INT8:
				case cNextParser.TYPE_INT16:
				case cNextParser.TYPE_INT32:
				case cNextParser.TYPE_INT64:
				case cNextParser.TYPE_UINT8:
				case cNextParser.TYPE_UINT16:
				case cNextParser.TYPE_UINT32:
				case cNextParser.TYPE_UINT64:
				case cNextParser.TYPE_FLOAT32:
				case cNextParser.TYPE_FLOAT64:
				case cNextParser.TYPE_FLOAT96:
				case cNextParser.TYPE_STRING:
				case cNextParser.TYPE_BOOLEAN:
					{
					this.state = 62;
					this.functionDeclaration();
					}
					break;
				case cNextParser.STATIC:
				case cNextParser.CLASS:
					{
					this.state = 63;
					this.classDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 68;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 69;
			this.match(cNextParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public globalDeclaration(): GlobalDeclarationContext {
		let _localctx: GlobalDeclarationContext = new GlobalDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, cNextParser.RULE_globalDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 71;
			this.match(cNextParser.ID);
			this.state = 72;
			this.match(cNextParser.ID);
			this.state = 73;
			this.match(cNextParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fileDirective(): FileDirectiveContext {
		let _localctx: FileDirectiveContext = new FileDirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, cNextParser.RULE_fileDirective);
		try {
			this.state = 77;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case cNextParser.IMPORT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 75;
				this.importDirective();
				}
				break;
			case cNextParser.INCLUDE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 76;
				this.includeDirective();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importDirective(): ImportDirectiveContext {
		let _localctx: ImportDirectiveContext = new ImportDirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, cNextParser.RULE_importDirective);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.match(cNextParser.IMPORT);
			this.state = 80;
			this.match(cNextParser.FILENAME);
			this.state = 81;
			this.match(cNextParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public includeDirective(): IncludeDirectiveContext {
		let _localctx: IncludeDirectiveContext = new IncludeDirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, cNextParser.RULE_includeDirective);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 83;
			this.match(cNextParser.INCLUDE);
			this.state = 84;
			this.match(cNextParser.FILENAME);
			this.state = 85;
			this.match(cNextParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classDeclaration(): ClassDeclarationContext {
		let _localctx: ClassDeclarationContext = new ClassDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, cNextParser.RULE_classDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === cNextParser.STATIC) {
				{
				this.state = 87;
				this.match(cNextParser.STATIC);
				}
			}

			this.state = 90;
			this.match(cNextParser.CLASS);
			this.state = 91;
			this.match(cNextParser.ID);
			this.state = 92;
			this.match(cNextParser.LBRACE);
			this.state = 93;
			this.classMembers();
			this.state = 94;
			this.match(cNextParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classMembers(): ClassMembersContext {
		let _localctx: ClassMembersContext = new ClassMembersContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, cNextParser.RULE_classMembers);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << cNextParser.T__0) | (1 << cNextParser.PUBLIC) | (1 << cNextParser.STATIC) | (1 << cNextParser.TYPE_INT8) | (1 << cNextParser.TYPE_INT16) | (1 << cNextParser.TYPE_INT32) | (1 << cNextParser.TYPE_INT64) | (1 << cNextParser.TYPE_UINT8) | (1 << cNextParser.TYPE_UINT16) | (1 << cNextParser.TYPE_UINT32) | (1 << cNextParser.TYPE_UINT64) | (1 << cNextParser.TYPE_FLOAT32) | (1 << cNextParser.TYPE_FLOAT64) | (1 << cNextParser.TYPE_FLOAT96) | (1 << cNextParser.TYPE_STRING) | (1 << cNextParser.TYPE_BOOLEAN))) !== 0)) {
				{
				this.state = 98;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case cNextParser.STATIC:
					{
					this.state = 96;
					this.staticMember();
					}
					break;
				case cNextParser.T__0:
				case cNextParser.PUBLIC:
				case cNextParser.TYPE_INT8:
				case cNextParser.TYPE_INT16:
				case cNextParser.TYPE_INT32:
				case cNextParser.TYPE_INT64:
				case cNextParser.TYPE_UINT8:
				case cNextParser.TYPE_UINT16:
				case cNextParser.TYPE_UINT32:
				case cNextParser.TYPE_UINT64:
				case cNextParser.TYPE_FLOAT32:
				case cNextParser.TYPE_FLOAT64:
				case cNextParser.TYPE_FLOAT96:
				case cNextParser.TYPE_STRING:
				case cNextParser.TYPE_BOOLEAN:
					{
					this.state = 97;
					this.regularMember();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public staticMember(): StaticMemberContext {
		let _localctx: StaticMemberContext = new StaticMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, cNextParser.RULE_staticMember);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.match(cNextParser.STATIC);
			this.state = 104;
			this.declaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public regularMember(): RegularMemberContext {
		let _localctx: RegularMemberContext = new RegularMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, cNextParser.RULE_regularMember);
		try {
			this.state = 108;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 106;
				this.declaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 107;
				this.classFunction();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classFunction(): ClassFunctionContext {
		let _localctx: ClassFunctionContext = new ClassFunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, cNextParser.RULE_classFunction);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === cNextParser.PUBLIC) {
				{
				this.state = 110;
				this.match(cNextParser.PUBLIC);
				}
			}

			this.state = 113;
			this.returnType();
			this.state = 114;
			this.match(cNextParser.ID);
			this.state = 115;
			this.match(cNextParser.LPAREN);
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << cNextParser.TYPE_INT8) | (1 << cNextParser.TYPE_INT16) | (1 << cNextParser.TYPE_INT32) | (1 << cNextParser.TYPE_INT64) | (1 << cNextParser.TYPE_UINT8) | (1 << cNextParser.TYPE_UINT16) | (1 << cNextParser.TYPE_UINT32) | (1 << cNextParser.TYPE_UINT64) | (1 << cNextParser.TYPE_FLOAT32) | (1 << cNextParser.TYPE_FLOAT64) | (1 << cNextParser.TYPE_FLOAT96) | (1 << cNextParser.TYPE_STRING) | (1 << cNextParser.TYPE_BOOLEAN))) !== 0)) {
				{
				this.state = 116;
				this.parameterList();
				}
			}

			this.state = 119;
			this.match(cNextParser.RPAREN);
			this.state = 120;
			this.match(cNextParser.LBRACE);
			this.state = 124;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 7)) & ~0x1F) === 0 && ((1 << (_la - 7)) & ((1 << (cNextParser.TYPE_INT8 - 7)) | (1 << (cNextParser.TYPE_INT16 - 7)) | (1 << (cNextParser.TYPE_INT32 - 7)) | (1 << (cNextParser.TYPE_INT64 - 7)) | (1 << (cNextParser.TYPE_UINT8 - 7)) | (1 << (cNextParser.TYPE_UINT16 - 7)) | (1 << (cNextParser.TYPE_UINT32 - 7)) | (1 << (cNextParser.TYPE_UINT64 - 7)) | (1 << (cNextParser.TYPE_FLOAT32 - 7)) | (1 << (cNextParser.TYPE_FLOAT64 - 7)) | (1 << (cNextParser.TYPE_FLOAT96 - 7)) | (1 << (cNextParser.TYPE_STRING - 7)) | (1 << (cNextParser.TYPE_BOOLEAN - 7)) | (1 << (cNextParser.LPAREN - 7)) | (1 << (cNextParser.RETURN - 7)) | (1 << (cNextParser.ID - 7)) | (1 << (cNextParser.NUMBER - 7)) | (1 << (cNextParser.STRING - 7)))) !== 0)) {
				{
				{
				this.state = 121;
				this.statement();
				}
				}
				this.state = 126;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 127;
			this.match(cNextParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, cNextParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this.returnType();
			this.state = 130;
			this.match(cNextParser.ID);
			this.state = 131;
			this.match(cNextParser.LPAREN);
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << cNextParser.TYPE_INT8) | (1 << cNextParser.TYPE_INT16) | (1 << cNextParser.TYPE_INT32) | (1 << cNextParser.TYPE_INT64) | (1 << cNextParser.TYPE_UINT8) | (1 << cNextParser.TYPE_UINT16) | (1 << cNextParser.TYPE_UINT32) | (1 << cNextParser.TYPE_UINT64) | (1 << cNextParser.TYPE_FLOAT32) | (1 << cNextParser.TYPE_FLOAT64) | (1 << cNextParser.TYPE_FLOAT96) | (1 << cNextParser.TYPE_STRING) | (1 << cNextParser.TYPE_BOOLEAN))) !== 0)) {
				{
				this.state = 132;
				this.parameterList();
				}
			}
